md/devops/ccoe-template/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    owner: YourEmail
  labels:
    app: YourProjectName
    bg: YourBg
    env: YourEnv
    fin_ibg: YourBg
    fin_ibu: YourIbu
    project: YourNamespace
    team: YourTeam/YourNamespace
  name: YourProjectName
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: YourProjectName
      bg: YourBg
      env: YourEnv
      fin_ibg: YourBg
      fin_ibu: YourIbu
      project: YourNamespace
      team: YourTeam/YourNamespace
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        owner: YourEmail
      labels:
        app: YourProjectName
        bg: YourBg
        env: YourEnv
        fin_ibg: YourBg
        fin_ibu: YourIbu
        project: YourNamespace
        team: YourTeam/YourNamespace
    spec:
      containers:
        - image: YourImage
          imagePullPolicy: Always
          name: YourProjectName
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 250m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsGroup: 3000
            runAsNonRoot: true
            runAsUser: 1000
          stdin: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
          volumeMounts:
            - mountPath: YourConfigPath
              name: config
              subPath: YourConfigFileName
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: YourHarborSecret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 2000
        runAsGroup: 3000
        runAsNonRoot: true
        runAsUser: 1000
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 0775
            items:
              - key: YourConfigFileName
                mode: 0775
                path: YourConfigFileName
            name: YourProjectName-config
            optional: false
          name: config
