md/devops/ccoe-template/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    owner: YourEmail
  labels:
    app: YourProjectName
    bg: YourBg
    env: YourEnv
    fin_ibg: YourBg
    fin_ibu: YourIbu
    project: YourNamespace
    team: YourTeam/YourNamespace
  name: YourProjectName-svc
spec:
  clusterIP: None
  clusterIPs:
    - None
  ports:
    - name: "3000"
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: YourProjectName
    bg: YourBg
    env: YourEnv
    fin_ibg: YourBg
    fin_ibu: YourIbu
    project: YourNamespace
    team: YourTeam/YourNamespace
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
